Bugfix footer theme form not wide enough. No longer jogged left. Align theme form left.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -143,7 +143,6 @@ form {
         grid-area: footer;
         grid-row-start: 4;
         position: fixed;
-        margin-left: -8px;
         bottom: 0;
         width: 100%;
         background: rgba(220, 220, 220, .9);
@@ -164,9 +163,10 @@ form {
         form {
             float: left;
             height: 22px;
-            width: 250px;
+            width: 275px;
             margin: 2px 0 0 20px;
             border: none;
+            text-align: left;
         }
     }
 }
